# limo_mission

./: CMakeLists.txt
cfg/: ObstacleAvoid.cfg  Pedestrian.cfg  TrafficLight.cfg
config/: obstacle_avoid.yaml  parking.yaml  pedestrian.yaml  traffic_light.yaml
launch/: bringup.launch  custom_integrated.launch  mission_main.launch
scripts/custom_node/: color_analyzer.py  histogram_obstacle_avoid_node.py  modified_obstacle_avoid_node.py  modified_parking_node.py  modified_rotary.py  modified_traffic_light_node.py  state_manager.py  진행사항.txt
scripts/final_codes/: ReadMe.md  final_lane_detection.py  final_modified_for_speed  modified_state_manager.py
